--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,11 +16,11 @@ find_package(pybind11 CONFIG REQUIRED)
 
 # Add a library using FindPython's tooling (pybind11 also provides a helper like
 # this)
-python_add_library(_core MODULE stly/stly.cpp WITH_SOABI)
-target_link_libraries(_core PRIVATE pybind11::headers)
+python_add_library(_stly MODULE stly/stly.cpp WITH_SOABI)
+target_link_libraries(_stly PRIVATE pybind11::headers)
 
 # This is passing in the version as a define just as an example
-target_compile_definitions(_core PRIVATE VERSION_INFO=${PROJECT_VERSION})
+target_compile_definitions(_stly PRIVATE VERSION_INFO=${PROJECT_VERSION})
 
 # The install directory is the output (wheel) directory
-install(TARGETS _core DESTINATION scikit_build_example)
+install(TARGETS _stly DESTINATION stly)
